logs/watchdog_20251013_0600.log
[13/10/2025  6:00:01,61] START WATCHDOG 
  File "C:\AUTOMAZIONE\odin_watchdog_mt5.py", line 192
    elif step >= 3:
    ^^^^
SyntaxError: invalid syntax
[13/10/2025  6:00:01,86] END WATCHDOG 
